# python-upskilling

./: .gitignore  README.md  pyproject.toml
solutions/python/black-jack/1/: black_jack.py
solutions/python/black-jack/2/: black_jack.py
solutions/python/black-jack/3/: black_jack.py
solutions/python/card-games/1/: lists.py
solutions/python/card-games/2/: lists.py
solutions/python/card-games/3/: lists.py
solutions/python/card-games/4/: lists.py
solutions/python/card-games/5/: lists.py
solutions/python/cater-waiter/1/: sets.py
solutions/python/cater-waiter/2/: sets.py
solutions/python/chaitanas-colossal-coaster/1/: list_methods.py
solutions/python/chaitanas-colossal-coaster/2/: list_methods.py
solutions/python/currency-exchange/1/: exchange.py
solutions/python/currency-exchange/2/: exchange.py
solutions/python/ellens-alien-game/1/: classes.py
solutions/python/ghost-gobble-arcade-game/1/: arcade_game.py
solutions/python/ghost-gobble-arcade-game/2/: arcade_game.py
solutions/python/grains/1/: grains.py
solutions/python/grains/2/: grains.py
solutions/python/grains/3/: grains.py
solutions/python/grains/4/: grains.py
solutions/python/grains/5/: grains.py
solutions/python/inventory-management/1/: dicts.py
solutions/python/inventory-management/2/: dicts.py
solutions/python/little-sisters-essay/1/: string_methods.py
solutions/python/little-sisters-vocab/1/: strings.py
solutions/python/little-sisters-vocab/2/: strings.py
src/: fitness_metrics.py
src/python_upskilling/: __init__.py  main.py
tests/: test_main.py
(+13 files in other folders)
